https://test.kuali.org/jira/browse/KRAFUNC-104
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6317 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-dev/index.html
+++ b/kra-coi-dev/index.html
@@ -1,131 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>Index of file:///Macintosh HD/java/projects/kul-mocks/trunk/kra-coi-dev/</title>
-
-
-<!-- base href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/" -->
-<style type="text/css">
-img { border: 0; padding: 0 2px; vertical-align: text-bottom; }
-td  { font-family: monospace; padding: 2px 3px; text-align: right; vertical-align: bottom; white-space: pre; }
-td:first-child { text-align: left; padding: 2px 10px 2px 3px; }
-table { border: 0; }
-a.symlink { font-style: italic; }
-</style></head><body>
-<h1>Index of file:///Macintosh HD/java/projects/kul-mocks/trunk/kra-coi-dev/</h1>
-<hr><table>
-<tbody><tr><td colspan="3"><a href="file:///java/projects/kul-mocks/trunk/">Up to higher level directory</a></td></tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/.svn"><img src="index_files/gopher-menu.gif" alt="Directory: ">.svn</a></td>
- <td></td>
- <td>12/17/08</td>
- <td>9:29:42 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/Old%20mocks"><img src="index_files/gopher-menu.gif" alt="Directory: ">Old mocks</a></td>
- <td></td>
- <td>11/4/08</td>
- <td>3:35:54 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-actions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-actions.html</a></td>
- <td>34 KB</td>
- <td>9/15/08</td>
- <td>5:11:44 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-addDisclosure.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-addDisclosure.html</a></td>
- <td>15 KB</td>
- <td>9/15/08</td>
- <td>5:11:44 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-addFinancialEntity.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-addFinancialEntity.html</a></td>
- <td>12 KB</td>
- <td>9/15/08</td>
- <td>5:11:44 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-customdata.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-customdata.html</a></td>
- <td>10 KB</td>
- <td>11/7/08</td>
- <td>10:18:48 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-disclosure.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosure.html</a></td>
- <td>35 KB</td>
- <td>11/10/08</td>
- <td>11:34:39 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-disclosure1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosure1.html</a></td>
- <td>33 KB</td>
- <td>11/17/08</td>
- <td>6:21:23 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-disclosure2.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosure2.html</a></td>
- <td>78 KB</td>
- <td>11/17/08</td>
- <td>6:21:23 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-disclosureActions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosureActions.html</a></td>
- <td>32 KB</td>
- <td>11/7/08</td>
- <td>10:18:49 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-financialInterest.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-financialInterest.html</a></td>
- <td>63 KB</td>
- <td>11/7/08</td>
- <td>10:18:49 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-financialInterest1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-financialInterest1.html</a></td>
- <td>59 KB</td>
- <td>11/17/08</td>
- <td>6:21:23 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-management.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-management.html</a></td>
- <td>8 KB</td>
- <td>11/7/08</td>
- <td>10:18:49 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-notes.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-notes.html</a></td>
- <td>15 KB</td>
- <td>11/7/08</td>
- <td>10:18:48 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-notes1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-notes1.html</a></td>
- <td>29 KB</td>
- <td>11/17/08</td>
- <td>6:21:23 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-permission.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-permission.html</a></td>
- <td>17 KB</td>
- <td>11/7/08</td>
- <td>10:18:48 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-reviewDisclosure.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-reviewDisclosure.html</a></td>
- <td>15 KB</td>
- <td>9/15/08</td>
- <td>5:11:45 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/coi-reviewFinancialEntity.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-reviewFinancialEntity.html</a></td>
- <td>15 KB</td>
- <td>9/15/08</td>
- <td>5:11:45 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/images"><img src="index_files/gopher-menu.gif" alt="Directory: ">images</a></td>
- <td></td>
- <td>11/7/08</td>
- <td>10:18:49 AM</td>
-</tr>
-</tbody></table><hr>
-</body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>Index of file:///java/projects/kul-mocks/trunk/kra-coi-dev/</title><!-- base href="file:///java/projects/kul-mocks/trunk/kra-coi-dev/" --><style type="text/css">img { border: 0; padding: 0 2px; vertical-align: text-bottom; }td  { font-family: monospace; padding: 2px 3px; text-align: right; vertical-align: bottom; white-space: pre; }td:first-child { text-align: left; padding: 2px 10px 2px 3px; }table { border: 0; }a.symlink { font-style: italic; }</style></head><body><h1>Index of directory: kra-coi-dev</h1><hr><table><tbody><tr><td colspan="3"><a href="file:///java/projects/kul-mocks/trunk/">Up to higher level directory</a></td></tr><tr> <td><a href=".svn"><img src="index_files/gopher-menu.gif" alt="Directory: ">.svn</a></td> <td></td> <td>12/17/08</td> <td>9:29:42 AM</td></tr><tr> <td><a href="Old%20mocks"><img src="index_files/gopher-menu.gif" alt="Directory: ">Old mocks</a></td> <td></td> <td>11/4/08</td> <td>3:35:54 PM</td></tr><tr> <td><a href="coi-actions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-actions.html</a></td> <td>34 KB</td> <td>9/15/08</td> <td>5:11:44 PM</td></tr><tr> <td><a href="coi-addDisclosure.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-addDisclosure.html</a></td> <td>15 KB</td> <td>9/15/08</td> <td>5:11:44 PM</td></tr><tr> <td><a href="coi-addFinancialEntity.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-addFinancialEntity.html</a></td> <td>12 KB</td> <td>9/15/08</td> <td>5:11:44 PM</td></tr><tr> <td><a href="coi-customdata.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-customdata.html</a></td> <td>10 KB</td> <td>11/7/08</td> <td>10:18:48 AM</td></tr><tr> <td><a href="coi-disclosure.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosure.html</a></td> <td>35 KB</td> <td>11/10/08</td> <td>11:34:39 AM</td></tr><tr> <td><a href="coi-disclosure1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosure1.html</a></td> <td>33 KB</td> <td>11/17/08</td> <td>6:21:23 PM</td></tr><tr> <td><a href="coi-disclosure2.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosure2.html</a></td> <td>78 KB</td> <td>11/17/08</td> <td>6:21:23 PM</td></tr><tr> <td><a href="coi-disclosureActions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-disclosureActions.html</a></td> <td>32 KB</td> <td>11/7/08</td> <td>10:18:49 AM</td></tr><tr> <td><a href="coi-financialInterest.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-financialInterest.html</a></td> <td>63 KB</td> <td>11/7/08</td> <td>10:18:49 AM</td></tr><tr> <td><a href="coi-financialInterest1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-financialInterest1.html</a></td> <td>59 KB</td> <td>11/17/08</td> <td>6:21:23 PM</td></tr><tr> <td><a href="coi-management.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-management.html</a></td> <td>8 KB</td> <td>11/7/08</td> <td>10:18:49 AM</td></tr><tr> <td><a href="coi-notes.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-notes.html</a></td> <td>15 KB</td> <td>11/7/08</td> <td>10:18:48 AM</td></tr><tr> <td><a href="coi-notes1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-notes1.html</a></td> <td>29 KB</td> <td>11/17/08</td> <td>6:21:23 PM</td></tr><tr> <td><a href="coi-permission.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-permission.html</a></td> <td>17 KB</td> <td>11/7/08</td> <td>10:18:48 AM</td></tr><tr> <td><a href="coi-reviewDisclosure.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-reviewDisclosure.html</a></td> <td>15 KB</td> <td>9/15/08</td> <td>5:11:45 PM</td></tr><tr> <td><a href="coi-reviewFinancialEntity.html"><img src="index_files/gopher-unknown.gif" alt="File: ">coi-reviewFinancialEntity.html</a></td> <td>15 KB</td> <td>9/15/08</td> <td>5:11:45 PM</td></tr><tr> <td><a href="images"><img src="index_files/gopher-menu.gif" alt="Directory: ">images</a></td> <td></td> <td>11/7/08</td> <td>10:18:49 AM</td></tr></tbody></table><hr></body></html>
