--- a/kra-irb-dev/index.html
+++ b/kra-irb-dev/index.html
@@ -1,167 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>Index of file:///java/projects/kul-mocks/trunk/kra-irb-dev/</title>
-
-
-<!-- base href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/" -->
-<style type="text/css">
-img { border: 0; padding: 0 2px; vertical-align: text-bottom; }
-td  { font-family: monospace; padding: 2px 3px; text-align: right; vertical-align: bottom; white-space: pre; }
-td:first-child { text-align: left; padding: 2px 10px 2px 3px; }
-table { border: 0; }
-a.symlink { font-style: italic; }
-</style></head><body>
-<h1>Index of file:///java/projects/kul-mocks/trunk/kra-irb-dev/</h1>
-<hr><table>
-<tbody><tr><td colspan="3"><a href="file:///java/projects/kul-mocks/trunk/">Up to higher level directory</a></td></tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/.DS_Store"><img src="index_files/gopher-unknown.gif" alt="File: ">.DS_Store</a></td>
- <td>7 KB</td>
- <td>11/10/08</td>
- <td>10:37:57 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/.svn"><img src="index_files/gopher-menu.gif" alt="Directory: ">.svn</a></td>
- <td></td>
- <td>12/17/08</td>
- <td>9:29:42 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/aw-personnel.html"><img src="index_files/gopher-unknown.gif" alt="File: ">aw-personnel.html</a></td>
- <td>143 KB</td>
- <td>10/27/08</td>
- <td>4:42:08 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/images"><img src="index_files/gopher-menu.gif" alt="Directory: ">images</a></td>
- <td></td>
- <td>11/10/08</td>
- <td>10:36:00 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-.html</a></td>
- <td>17 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-amendments.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-amendments.html</a></td>
- <td>17 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-customdata.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-customdata.html</a></td>
- <td>13 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-funding.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-funding.html</a></td>
- <td>22 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-funding1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-funding1.html</a></td>
- <td>26 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-irbmanagement.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-irbmanagement.html</a></td>
- <td>6 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-notes.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-notes.html</a></td>
- <td>31 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-notes1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-notes1.html</a></td>
- <td>11 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-permissions-viewrights.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-permissions-viewrights.html</a></td>
- <td>8 KB</td>
- <td>10/14/08</td>
- <td>3:10:21 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-permissions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-permissions.html</a></td>
- <td>15 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-personnel.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-personnel.html</a></td>
- <td>62 KB</td>
- <td>12/4/08</td>
- <td>9:16:41 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-protocol-BFN01.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-BFN01.html</a></td>
- <td>51 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-protocol-MR.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-MR.html</a></td>
- <td>45 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-protocol-MR1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-MR1.html</a></td>
- <td>40 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-protocol-MR2.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-MR2.html</a></td>
- <td>38 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-protocol.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol.html</a></td>
- <td>53 KB</td>
- <td>12/17/08</td>
- <td>9:29:00 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-protocolactions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocolactions.html</a></td>
- <td>71 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-questionnaire.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-questionnaire.html</a></td>
- <td>29 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-roles-pop.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-roles-pop.html</a></td>
- <td>5 KB</td>
- <td>10/14/08</td>
- <td>3:10:21 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-specialreview.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-specialreview.html</a></td>
- <td>31 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-irb-dev/irb-specialreview1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-specialreview1.html</a></td>
- <td>30 KB</td>
- <td>11/28/08</td>
- <td>11:58:09 AM</td>
-</tr>
-</tbody></table><hr>
-</body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>Index of </title><!-- base href="" --><style type="text/css">img { border: 0; padding: 0 2px; vertical-align: text-bottom; }td  { font-family: monospace; padding: 2px 3px; text-align: right; vertical-align: bottom; white-space: pre; }td:first-child { text-align: left; padding: 2px 10px 2px 3px; }table { border: 0; }a.symlink { font-style: italic; }</style></head><body><h1>Index of directory: kra-irb-dev</h1><hr><table><tbody><tr><td colspan="3"><a href="file:///java/projects/kul-mocks/trunk/">Up to higher level directory</a></td></tr><tr> <td><a href=".DS_Store"><img src="index_files/gopher-unknown.gif" alt="File: ">.DS_Store</a></td> <td>7 KB</td> <td>11/10/08</td> <td>10:37:57 AM</td></tr><tr> <td><a href=".svn"><img src="index_files/gopher-menu.gif" alt="Directory: ">.svn</a></td> <td></td> <td>12/17/08</td> <td>9:29:42 AM</td></tr><tr> <td><a href="aw-personnel.html"><img src="index_files/gopher-unknown.gif" alt="File: ">aw-personnel.html</a></td> <td>143 KB</td> <td>10/27/08</td> <td>4:42:08 PM</td></tr><tr> <td><a href="images"><img src="index_files/gopher-menu.gif" alt="Directory: ">images</a></td> <td></td> <td>11/10/08</td> <td>10:36:00 AM</td></tr><tr> <td><a href="irb-.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-.html</a></td> <td>17 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-amendments.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-amendments.html</a></td> <td>17 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-customdata.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-customdata.html</a></td> <td>13 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-funding.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-funding.html</a></td> <td>22 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-funding1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-funding1.html</a></td> <td>26 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-irbmanagement.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-irbmanagement.html</a></td> <td>6 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-notes.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-notes.html</a></td> <td>31 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-notes1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-notes1.html</a></td> <td>11 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-permissions-viewrights.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-permissions-viewrights.html</a></td> <td>8 KB</td> <td>10/14/08</td> <td>3:10:21 PM</td></tr><tr> <td><a href="irb-permissions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-permissions.html</a></td> <td>15 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-personnel.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-personnel.html</a></td> <td>62 KB</td> <td>12/4/08</td> <td>9:16:41 AM</td></tr><tr> <td><a href="irb-protocol-BFN01.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-BFN01.html</a></td> <td>51 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-protocol-MR.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-MR.html</a></td> <td>45 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-protocol-MR1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-MR1.html</a></td> <td>40 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-protocol-MR2.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol-MR2.html</a></td> <td>38 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-protocol.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocol.html</a></td> <td>53 KB</td> <td>12/17/08</td> <td>9:29:00 AM</td></tr><tr> <td><a href="irb-protocolactions.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-protocolactions.html</a></td> <td>71 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-questionnaire.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-questionnaire.html</a></td> <td>29 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-roles-pop.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-roles-pop.html</a></td> <td>5 KB</td> <td>10/14/08</td> <td>3:10:21 PM</td></tr><tr> <td><a href="irb-specialreview.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-specialreview.html</a></td> <td>31 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr><tr> <td><a href="irb-specialreview1.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-specialreview1.html</a></td> <td>30 KB</td> <td>11/28/08</td> <td>11:58:09 AM</td></tr></tbody></table><hr></body></html>
