--- a/kra-com-dev/index.html
+++ b/kra-com-dev/index.html
@@ -1,71 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>Index of file:///java/projects/kul-mocks/trunk/kra-com-dev</title>
-
-
-<!-- base href="file:///java/projects/kul-mocks/trunk/kra-com-dev/" -->
-<style type="text/css">
-img { border: 0; padding: 0 2px; vertical-align: text-bottom; }
-td  { font-family: monospace; padding: 2px 3px; text-align: right; vertical-align: bottom; white-space: pre; }
-td:first-child { text-align: left; padding: 2px 10px 2px 3px; }
-table { border: 0; }
-a.symlink { font-style: italic; }
-</style></head><body>
-<h1>Index of file:///java/projects/kul-mocks/trunk/kra-com-dev</h1>
-<hr><table>
-<tbody><tr><td colspan="3"><a href="file:///java/projects/kul-mocks/trunk/">Up to higher level directory</a></td></tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/.svn"><img src="index_files/gopher-menu.gif" alt="Directory: ">.svn</a></td>
- <td></td>
- <td>12/17/08</td>
- <td>9:29:42 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/_notes"><img src="index_files/gopher-menu.gif" alt="Directory: ">_notes</a></td>
- <td></td>
- <td>10/14/08</td>
- <td>3:17:46 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/cal2.js"><img src="index_files/gopher-unknown.gif" alt="File: ">cal2.js</a></td>
- <td>20 KB</td>
- <td>10/14/08</td>
- <td>3:17:46 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/ccl_addEvent.js"><img src="index_files/gopher-unknown.gif" alt="File: ">ccl_addEvent.js</a></td>
- <td>6 KB</td>
- <td>10/14/08</td>
- <td>3:17:46 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/images"><img src="index_files/gopher-menu.gif" alt="Directory: ">images</a></td>
- <td></td>
- <td>10/14/08</td>
- <td>3:17:46 PM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/irb-committee.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-committee.html</a></td>
- <td>13 KB</td>
- <td>11/3/08</td>
- <td>9:15:52 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/irb-members.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-members.html</a></td>
- <td>37 KB</td>
- <td>11/10/08</td>
- <td>9:15:50 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/irb-schedule.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-schedule.html</a></td>
- <td>68 KB</td>
- <td>10/20/08</td>
- <td>10:06:56 AM</td>
-</tr>
-<tr>
- <td><a href="file:///java/projects/kul-mocks/trunk/kra-com-dev/schedule.png"><img src="index_files/gopher-unknown.gif" alt="File: ">schedule.png</a></td>
- <td>17 KB</td>
- <td>10/14/08</td>
- <td>3:17:47 PM</td>
-</tr>
-</tbody></table><hr>
-</body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>Index of file:///java/projects/kul-mocks/trunk/kra-com-dev</title><!-- base href="" --><style type="text/css">img { border: 0; padding: 0 2px; vertical-align: text-bottom; }td  { font-family: monospace; padding: 2px 3px; text-align: right; vertical-align: bottom; white-space: pre; }td:first-child { text-align: left; padding: 2px 10px 2px 3px; }table { border: 0; }a.symlink { font-style: italic; }</style></head><body><h1>Index of directory: kra-com-dev</h1><hr><table><tbody><tr><td colspan="3"><a href="file:///java/projects/kul-mocks/trunk/">Up to higher level directory</a></td></tr><tr> <td><a href=".svn"><img src="index_files/gopher-menu.gif" alt="Directory: ">.svn</a></td> <td></td> <td>12/17/08</td> <td>9:29:42 AM</td></tr><tr> <td><a href="_notes"><img src="index_files/gopher-menu.gif" alt="Directory: ">_notes</a></td> <td></td> <td>10/14/08</td> <td>3:17:46 PM</td></tr><tr> <td><a href="cal2.js"><img src="index_files/gopher-unknown.gif" alt="File: ">cal2.js</a></td> <td>20 KB</td> <td>10/14/08</td> <td>3:17:46 PM</td></tr><tr> <td><a href="ccl_addEvent.js"><img src="index_files/gopher-unknown.gif" alt="File: ">ccl_addEvent.js</a></td> <td>6 KB</td> <td>10/14/08</td> <td>3:17:46 PM</td></tr><tr> <td><a href="images"><img src="index_files/gopher-menu.gif" alt="Directory: ">images</a></td> <td></td> <td>10/14/08</td> <td>3:17:46 PM</td></tr><tr> <td><a href="irb-committee.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-committee.html</a></td> <td>13 KB</td> <td>11/3/08</td> <td>9:15:52 AM</td></tr><tr> <td><a href="irb-members.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-members.html</a></td> <td>37 KB</td> <td>11/10/08</td> <td>9:15:50 AM</td></tr><tr> <td><a href="irb-schedule.html"><img src="index_files/gopher-unknown.gif" alt="File: ">irb-schedule.html</a></td> <td>68 KB</td> <td>10/20/08</td> <td>10:06:56 AM</td></tr><tr> <td><a href="schedule.png"><img src="index_files/gopher-unknown.gif" alt="File: ">schedule.png</a></td> <td>17 KB</td> <td>10/14/08</td> <td>3:17:47 PM</td></tr></tbody></table><hr></body></html>
