[BFN] KRAFUNC-19 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6321 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -4823,7 +4823,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <label for= "name">Add:</label>
                     </div></th>
                   <td class="infoline"><div align="center">
-                      <input type=text size=12 />
+                      <input type=text size="12" /> or
                       <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup" align="top">
                     </div></td>
                   <td class="infoline"><div align="center">
