[BFN] KRAFUNC-90 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6322 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-protocol.html
+++ b/kra-irb-dev/irb-protocol.html
@@ -385,7 +385,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             Enter comments here on t...
                         </td>
                         <td style="text-align:center;">
-                        	<input type="image" src="../images/book_open.png" width="16" height="16" border="0" style="border:none;">
+                        	<input type="image" src="../images/open_detailview.png" alt="view detail" width="16" height="16" border="0" style="border:none;">
                         </td>
                     </tr>
                     <tr>
@@ -405,7 +405,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             
                         </td>
                         <td style="text-align:center;">
-                        	<input type="image" src="../images/book_open.png" width="16" height="16" border="0" style="border:none;">
+                        	<input type="image" src="../images/open_detailview.png" alt="view detail" width="16" height="16" border="0" style="border:none;">
                         </td>
                     </tr>
                     <!--<tr>
@@ -601,8 +601,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td class="infoline">(select) <a href="#">
                   <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
                   </a></td>
-                <td class="infoline">
-                	&nbsp;
+                <td class="infoline">&nbsp;
+                	
                 </td>
               </tr>
               <tr>
