[BFN] KRAFUNC-93 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6323 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms_KRAFUNC-99_01.html
+++ b/kra-awa-dev/aw-payments-reports-terms_KRAFUNC-99_01.html
@@ -4892,19 +4892,19 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     	<th style="text-align:right;">Non-Competing Continuation:</th>
                         <td>
                         	<select name="noncompcont">
-                            	<option value="0">34: 10 months prior to expiration date</option>
-                                <option value="0">15: 30 days prior to expiration date</option>
-                                <option value="0">18: 4 months prior to expiration date</option>
-                                <option value="0">36: 45 days prior to expiration date</option>
-                                <option value="0">19: 5 months prior to expiration date</option>
-                                <option value="0">20: 6 months prior to expiration date</option>
-                                <option value="0">16: 60 days prior to expiration date</option>
-                                <option value="0">21: 7 months prior to expiration date</option>
-                                <option value="0">37: 75 days prior to expiration date</option>
-                                <option value="0">22: 8 months prior to expiration date</option>
-                                <option value="0">23: 9 months prior to expiration date</option>
-                                <option value="0">17: 90 days prior to expiration date</option>
-                                <option value="0">13: At expiration</option>
+                            	<option value="0">10 months prior to expiration date</option>
+                                <option value="0">30 days prior to expiration date</option>
+                                <option value="0">4 months prior to expiration date</option>
+                                <option value="0">45 days prior to expiration date</option>
+                                <option value="0">5 months prior to expiration date</option>
+                                <option value="0">6 months prior to expiration date</option>
+                                <option value="0">60 days prior to expiration date</option>
+                                <option value="0">7 months prior to expiration date</option>
+                                <option value="0">75 days prior to expiration date</option>
+                                <option value="0">8 months prior to expiration date</option>
+                                <option value="0">9 months prior to expiration date</option>
+                                <option value="0">90 days prior to expiration date</option>
+                                <option value="0">At expiration</option>
                             </select>
                         </td>
                     </tr>
@@ -4912,23 +4912,22 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     	<th style="text-align:right;">Competing Renewal:</th>
                         <td>
                         	<select name="comprenew">
-                            	<option value="0">34: 10 months prior to expiration date</option>
-                                <option value="0">15: 30 days prior to expiration date</option>
-                                <option value="0">18: 4 months prior to expiration date</option>
-                                <option value="0">36: 45 days prior to expiration date</option>
-                                <option value="0">19: 5 months prior to expiration date</option>
-                                <option value="0">20: 6 months prior to expiration date</option>
-                                <option value="0">16: 60 days prior to expiration date</option>
-                                <option value="0">21: 7 months prior to expiration date</option>
-                                <option value="0">37: 75 days prior to expiration date</option>
-                                <option value="0">22: 8 months prior to expiration date</option>
-                                <option value="0">23: 9 months prior to expiration date</option>
-                                <option value="0">17: 90 days prior to expiration date</option>
-                                <option value="0">13: At expiration</option>
+                            	<option value="0">10 months prior to expiration date</option>
+                                <option value="0">30 days prior to expiration date</option>
+                                <option value="0">4 months prior to expiration date</option>
+                                <option value="0">45 days prior to expiration date</option>
+                                <option value="0">5 months prior to expiration date</option>
+                                <option value="0">6 months prior to expiration date</option>
+                                <option value="0">60 days prior to expiration date</option>
+                                <option value="0">7 months prior to expiration date</option>
+                                <option value="0">75 days prior to expiration date</option>
+                                <option value="0">8 months prior to expiration date</option>
+                                <option value="0">9 months prior to expiration date</option>
+                                <option value="0">90 days prior to expiration date</option>
+                                <option value="0">At expiration</option>
                             </select>
                         </td>
                     </tr>
-                    
                 </table>
                 
 		</div> <!-- End Tab Content Div (class='tab-container') Div -->          
