--- a/kra-irb-dev/irb-personnel.html
+++ b/kra-irb-dev/irb-personnel.html
@@ -967,7 +967,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </div>
         <div align="right"><br>
           * required </div>
-        <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><img src="../images/buttonsmall_deletesel.gif" alt="save" width="114" height="18" hspace="5" border="0"><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
+        <div class="globalbuttons">
+            <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"></a>
+            <a href="#"><img src="../images/buttonsmall_deletesel.gif" alt="save" width="114" height="18" hspace="5" border="0"></a>
+            <a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a>
+            <a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a>
+        </div>
       </div></td>
       <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
     </tr>
