[BFN] KRAFUNC-117 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6328 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-permissions.html
+++ b/kra-irb-dev/irb-permissions.html
@@ -116,7 +116,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
               <tr>
                 <th><div align="right">Viewer:</div></th>
-                <td align=left valign=middle >Cybil Cole, Bethany Davis, Cheryl Eger, Eric Swank</td>
+                <td align=left valign=middle >Cybil Cole; Bethany Davis; Eger, Cheryl; Eric Swank</td>
               </tr>
               <tr>
                 <th><div align="right">Role 3:</div></th>
@@ -144,8 +144,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding=0 cellspacing="0"  summary="">
               <tr>
                 <th>&nbsp;</th>
-                <th><label for ="person">*Person</label></th>
-                <th>User Name</th>
+                <th><label for ="person">*Username</label></th>
+                <th>Full Name</th>
                 <th>Unit #</th>
                 <th>Unit Name</th>
                 <th><label for="role">Role</label></th>
@@ -164,20 +164,22 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <option selected>unassigned</option>
                     <option>aggregator</option>
                     <option>viewer</option>
-                    <option>Role 3</option>
-                    <option>Role 4</option>
-                    <option>etc...</option>
                 </select></td>
                 <td class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-add1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
                 <th>1</th>
                 <td><span class="infocell">AOBECKFO</span></td>
-                <td><span class="infocell">Beckford, Augustus O</span></td>
+                <td nowrap><span class="infocell">Beckford, Augustus O</span></td>
                 <td align="right">165000</td>
                 <td>SB-SART</td>
                 <td>Aggregator</td>
-                <td nowrap><div align="center"><a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="delete" width=54 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-clearroles.gif" alt="delete" width=61 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                <td nowrap>
+                	<div align="center">
+                    	<a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="edit role" width="54" height="15" border="0"></a>
+                		<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>
+                    </div>
+                </td>
               </tr>
               <tr>
                 <th>2</th>
@@ -186,7 +188,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td align="right">165000</td>
                 <td>SB-SART</td>
                 <td>Viewer</td>
-                <td nowrap><div align="center"><a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="delete" width=54 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-clearroles.gif" alt="delete" width=61 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                <td nowrap>
+                	<div align="center">
+                    	<a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="edit role" width="54" height="15" border="0"></a>
+                		<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>
+                    </div>
+                </td>
               </tr>
               <tr>
                 <th>3</th>
@@ -195,7 +202,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td align="right">165000</td>
                 <td>Center for Environmental Health Sciences</td>
                 <td>Viewer</td>
-                <td nowrap><div align="center"><a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="delete" width=54 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-clearroles.gif" alt="delete" width=61 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                <td nowrap>
+                	<div align="center">
+                    	<a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="edit role" width="54" height="15" border="0"></a>
+                		<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>
+                    </div>
+                </td>
               </tr>
               <tr>
                 <th>4</th>
@@ -204,7 +216,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td>Viewer</td>
-                <td nowrap><div align="center"><a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="delete" width=54 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-clearroles.gif" alt="delete" width=61 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                <td nowrap>
+                	<div align="center">
+                    	<a href="irb-roles-pop.html" target="_blank" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="edit role" width="54" height="15" border="0"></a>
+                		<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>
+                    </div>
+                </td>
               </tr>
             </table>
           </div>
